--- a/fintech/src/App.css
+++ b/fintech/src/App.css
@@ -73,5 +73,76 @@ ul {
 .container {
   display: grid;
   padding: var(--gap);
-  gap: var(--gap)
+  gap: var(--gap);
+  grid-template-columns: 240px auto;
+}
+
+/* sidenave */
+
+.sidenav li {
+  display: flex;
+  align-items: center;
+  gap: var(--gap);
+}
+
+.sidenav li span {
+  width: 2rem;
+  height: 2rem;
+  background-color: var(--color-4);
+  border-radius: var(--gap);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.sidenav li a {
+  flex: 1;
+  font-size: 1.25rem;
+  text-decoration: none;
+  color: var(--color-1);
+  padding: var(--gap-s) 0;
+}
+
+.sidenav li:hover span {
+  background-color: var(--color-3);
+}
+
+/* daterange */
+
+.daterange {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: var(--gap);
+}
+
+/* resumo */
+
+.resumo {
+  display: flex;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.resumo h2 {
+  font-size: 1.5rem;
+  margin-bottom: var(--gap);
+  color: var(--color-1);
+}
+
+.venda {
+  display: grid;
+  grid-template-columns: auto auto 1fr;
+  gap: var(--gap);
+  margin-bottom: var(--gap-s);
+  align-items: center;
+}
+
+.venda div:last-child {
+  justify-self: end;
+}
+
+.venda a {
+  text-decoration: none;
+  color: inherit;
 }
